[package]
name = "github-actions"
version = "0.0.3"
authors = ["Danil Akhtarov <daxartio@gmail.com>"]
description = "Utilities for developing custom GitHub Actions"
edition = "2021"
repository = "https://github.com/daxartio/github-actions"
license = "MIT"

[dependencies]
uuid = { version = "1.16.0", features = ["v4"] }
