[package]
name = "github-actions"
version = "0.0.5"
authors = ["Danil Akhtarov <daxartio@gmail.com>"]
description = "Utilities for developing custom GitHub Actions"
edition = "2024"
repository = "https://github.com/daxartio/github-actions"
license = "MIT"

[features]
default = []
all = ["uuid"]
uuid = ["dep:uuid"]

[dependencies]
uuid = { version = "1.23.1", features = ["v4"], optional = true}
